# MLOpsTest1

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  predict.dockerfile  pyproject.toml  requirements.txt  trainer.dockerfile
.dvc/: config
.github/workflows/: codecheck.yml  tests.yml
Test1/: predict_model.py  train_model.py
Test1/data/: make_dataset.py
Test1/models/: model.py
Test1/visualizations/: visualize.py
data/processed/: test_labels.pt  train_labels.pt
docs/: mkdocs.yaml
docs/source/: index.md
models/: .gitignore  TrainedModel.pt  TrainedModel.pt.dvc  TrainedModel2.pt.dvc
tests/: __init__.py  test_data.py  test_train.py
wandb/: latest-run
wandb/run-20240105_133019-jzq6y363/: run-jzq6y363.wandb
wandb/run-20240105_133019-jzq6y363/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240105_133528-s58e5ol5/: run-s58e5ol5.wandb
wandb/run-20240105_133528-s58e5ol5/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240105_133709-pz70xm9n/: run-pz70xm9n.wandb
wandb/run-20240105_133709-pz70xm9n/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240105_133922-puydgi5d/: run-puydgi5d.wandb
wandb/run-20240105_133922-puydgi5d/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20240105_133942-mx0u88e2/: run-mx0u88e2.wandb
wandb/run-20240105_133942-mx0u88e2/files/: config.yaml  wandb-metadata.json  wandb-summary.json
