[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Test1"
version = "0.0.1"
description = "Hmmmmmmmmm...."
authors = [
  { name = "MacNuggets", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.9"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["Test1"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
